--- a/Web modules/Python app/templates/search.html
+++ b/Web modules/Python app/templates/search.html
@@ -10,16 +10,17 @@
     <h1> Search page</h1>
     {% for service in all_service %}
     <div>
-        {% if service.gender== 1 %}
+        <!-- {% if service.gender== 1 %}
         <img src="../static/image/male-profile.jpg">
         {% else %}
         <img src="../static/image/female-profile.jpg">
-        {% endif %}
+        {% endif %} -->
+        <img src="{{service.image}}" alt="image" height ="300">
         <br>
         <b>Tên: {{service.name}}</b>
         <p>Năm sinh: {{service.yob}}</p>
         <p>Chiều cao: {{service.height}}</p>
-        <p>Địa chỉ: {{service.address}}</p>
+        <a href="{{url_for('detail', service_id = service.id )}}">Chi tiết</a>
         <hr>
     </div>
     {% endfor %}
