--- a/Web modules/Python app/templates/new-service.html
+++ b/Web modules/Python app/templates/new-service.html
@@ -19,7 +19,7 @@
         <br>
 
         <label> Năm sinh </label>
-        <input type="text" name = "yob">
+        <input type="number" name = "yob" max = "2000">
         <br>
 
         <label> Chiều cao </label>
@@ -27,7 +27,7 @@
         <br>
 
         <label> Số điện thoại </label>
-        <input type="text" name = "phone">
+        <input type="number" name = "phone">
         <br>
 
         <label> Địa chỉ </label>
