--- a/Web modules/Python app/templates/update_service.html
+++ b/Web modules/Python app/templates/update_service.html
@@ -13,8 +13,8 @@
         <input type ='text' name = 'name' value ='{{service.name}}'>
         <br>
 
-        <label>Ngày sinh</label>
-        <input type ='text' name = 'yob' value = '{{service.yob}}'>
+        <label>Năm sinh</label>
+        <input type ='number' name = 'yob' max = "2000" value = '{{service.yob}}'>
         <br>
 
         <label>Giới tính</label>
@@ -27,7 +27,7 @@
         <br>
 
         <label>Số điện thoại</label>
-        <input type ='text' name = 'phone' value ='{{service.phone}}'>
+        <input type ='number' name = 'phone' value ='{{service.phone}}'>
         <br>
 
         <label>Địa chỉ</label>
