--- a/Web modules/Python app/templates/detail.html
+++ b/Web modules/Python app/templates/detail.html
@@ -16,6 +16,7 @@
     <p> <b>Địa chỉ:</b> {{service.address}}</p>
     <p> <b>Mô tả:</b> {{service.description}}</p>
     <p> <b>Số đo 3 vòng:</b> {{service.measurements[0]}} - {{service.measurements[1]}} - {{service.measurements[2]}}</p>
+    <a href="{{url_for('order', service_id = service.id)}}">Yêu cầu dịch vụ</a>
 
 </body>
 </html>
