--- a/Web modules/Python app/templates/detail.html
+++ b/Web modules/Python app/templates/detail.html
@@ -5,18 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mùa đông không lạnh</title>
+        <!-- bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <!-- font family -->
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+    <!-- css -->
+    <link rel="stylesheet" href="../static/css/style.css">
 </head>
 <body>
-    <img src ="{{service.image}}" alt = "image" height= "400">
-    <br>
-    <h1>{{service.name}} </h1>
-    <p> <b>Năm sinh:</b> {{service.yob}}</p>
-    <p> <b>Chiều cao: </b> {{service.height}}</p>
-    <p> <b>Số điện thoại:</b> {{service.phone}}</p>
-    <p> <b>Địa chỉ:</b> {{service.address}}</p>
-    <p> <b>Mô tả:</b> {{service.description}}</p>
-    <p> <b>Số đo 3 vòng:</b> {{service.measurements[0]}} - {{service.measurements[1]}} - {{service.measurements[2]}}</p>
-    <a href="{{url_for('order', service_id = service.id)}}">Yêu cầu dịch vụ</a>
+    <div class="d-flex justify-content-center mx-5 my-2">
+        <h1> Service Information </h1>
+    </div>
+    <div class="d-flex ml-5">
+        <img src ="{{service.image}}" alt = "image" height= "400" width ="250">
+        <div class="d-flex mx-5 flex-column"
+            </div>
+            <p></p><h3 class="font-weight-bold text-uppercase">{{service.name}} </h3></p>
+            <p> <b>Năm sinh:</b> {{service.yob}}</p>
+            <p> <b>Chiều cao: </b> {{service.height}}</p>
+            <p> <b>Số điện thoại:</b> {{service.phone}}</p>
+            <p> <b>Địa chỉ:</b> {{service.address}}</p>
+            <p> <b>Mô tả:</b> {{service.description}}</p>
+            <p> <b>Số đo 3 vòng:</b> {{service.measurements[0]}} - {{service.measurements[1]}} - {{service.measurements[2]}}</p>
+            <a href="{{url_for('order', service_id = service.id)}}">Yêu cầu dịch vụ</a>
+        </div>
+    </div>
 
 </body>
 </html>
