--- a/Web modules/Python app/templates/index.html
+++ b/Web modules/Python app/templates/index.html
@@ -4,10 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Mua dong khong lanh</title>
+    {% include 'meta-data.html' %}
 </head>
 <body>
-    <h1> Mùa Đông Không Lạnh </h1>
+    {% include 'homepage/navigation.html' %}
+    {% include 'homepage/carousel.html' %}
+    <h4 class= "font-weight-bold text-center my-5" > Chào mừng các bạn đã đến với mùa đông không lạnh </h4>
+    <h5 class= "font-weight-bold font-italic mx-5 text-center font-lobster"> "Chúng tôi ở đây là để bạn có mối quan hệ tốt đẹp với gia đình, người thân trong khi vẫn giữ được sự tự do và riêng tư, cũng như quyết định của bản thân bạn"</h5>
+    
+    <div class="d-flex justify-content-around my-5">
+        <div class="card text-white ml-5 mr-2">
+            <img class="card-img h-200px" src="../static/image/female.jpg" alt="female">
+            <div class="card-img-overlay d-flex align-items-center justify-content-end">
+                <a href="{{url_for('search', g = 0)}}" class="text-white mr-3 font-weight-bold">Bạn là nam </a>
+            </div>
+        </div>
+        <div class="card text-white mr-5 ml-2">
+            <img class="card-img h-200px" src="../static/image/male.jpg" alt="male">
+            <div class="card-img-overlay d-flex align-items-center justify-content-start">
+                <a href="{{url_for('search', g = 1)}}" class="text-white ml-3 font-weight-bold">Bạn là nữ </a>
+            </div>
+        </div>
+    </div>
+
+    <div class="bg-image w-100 d-flex flex-column"> 
+        <h3 class="text-white text-center my-5 font-weight-bold">Khách hàng bình chọn</h3>  
+        <div class="d-flex justify-content-around h-200px w-100">
+            <a href="#"><img src="../static/image/woods.jpg" class="border border-white h-150px w-150px mx-2"></a>
+            <a href="#"><img src="../static/image/lightning.jpg" class="border border-white h-150px w-150px mx-2"></a>
+            <a href="#"><img src="../static/image/rocks.jpg" class="border border-white h-150px w-150px mx-2"></a>
+            <a href="#"><img src="../static/image/steel.jpg" class="border border-white h-150px w-150px mx-2"></a>
+        </div> 
+        <div class="d-flex justify-content-around h-200px w-100">
+            <a href="#"><img src="../static/image/woods.jpg" class="border border-white h-150px w-150px mx-2"></a>
+            <a href="#"><img src="../static/image/lightning.jpg" class="border border-white h-150px w-150px mx-2"></a>
+            <a href="#"><img src="../static/image/rocks.jpg" class="border border-white h-150px w-150px mx-2"></a>
+            <a href="#"><img src="../static/image/steel.jpg" class="border border-white h-150px w-150px mx-2"></a>
+        </div> 
+    </div>
+
+    <h3 class="text-center my-5">Các gói dịch vụ</h3>
+    {% include 'homepage/cards.html' %}
+
+    <div class="d-flex bg-secondary justify-content-center align-items-center text-white p-2">
+        Được thực hiện bởi techkid
+    </div>
+
+    <!-- <h1> Mùa Đông Không Lạnh </h1>
     <a href="{{url_for('sign_in')}}"> Chưa có tài khoản?</a>
     
     <a href="{{url_for('logout')}}"> Đăng xuất </a> 
@@ -37,6 +81,7 @@
 
     <b> Bạn là admin? </b>
     <a href = "{{url_for('admin_login')}}"> Đăng nhập </a>
-    <a href = "{{url_for('admin_logout')}}"> Đăng xuất </a>
+    <a href = "{{url_for('admin_logout')}}"> Đăng xuất </a> -->
+    
 </body>
 </html>
