--- a/Web modules/Python app/templates/search.html
+++ b/Web modules/Python app/templates/search.html
@@ -5,11 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mua dong khong lanh</title>
+        <!-- bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <!-- font family -->
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+    <!-- css -->
+    <link rel="stylesheet" href="../static/css/style.css">
+
 </head>
 <body>
-    <h1> Search page</h1>
+    <h1 class="ml-5 my-2"> Search page</h1>
+    <div class="topnav bg-secondary d-flex p-2 my-5">
+            <a class="active p-2" href="{{url_for('index')}}">Home</a>
+            <a class="p-2" href="#about">About</a>
+            <a class="p-2" href="#contact">Contact</a>
+            <input class="p-2 ml-auto w-300px" type="text" placeholder="Search..">
+        </div>
+    
     {% for service in all_service %}
-    <div>
+    <div class="ml-5">
         <!-- {% if service.gender== 1 %}
         <img src="../static/image/male-profile.jpg">
         {% else %}
@@ -17,12 +36,13 @@
         {% endif %} -->
         <img src="{{service.image}}" alt="image" height ="300">
         <br>
-        <b>Tên: {{service.name}}</b>
+        <p><b>Tên: {{service.name}}</b></p>
         <p>Năm sinh: {{service.yob}}</p>
         <p>Chiều cao: {{service.height}}</p>
-        <a href="{{url_for('detail', service_id = service.id )}}">Chi tiết</a>
-        <hr>
+        <a href="{{url_for('detail', service_id = service.id )}}">Chi tiết</a>    
     </div>
+    <hr>
     {% endfor %}
+    <hr>
 </body>
 </html>
